update banner layout on mobile

--- a/dialogs/settings.html
+++ b/dialogs/settings.html
@@ -430,7 +430,7 @@
 
             function editEditorMeta() {
                 const defaultMeta = `title: ~{1:\${getFileTitle(index) || "New document"}}
-authors: ~{2:Author name}
+author: ~{2:Author name}
 date: \${strftime(Settings.getSetting("dateFormat", "%Y/%m/%d %H:%M"))}
 tags: ~{3:Uncategorized}
 description: ~{4:No description provided}
