--- a/dialogs/macros.html
+++ b/dialogs/macros.html
@@ -27,6 +27,7 @@
             flex-direction: column;
             justify-content: center;
             cursor: pointer;
+            align-items: center;
         }
 
         .macro-item:hover {
@@ -40,6 +41,8 @@
             opacity: 0.9;
             margin-bottom: 6px;
             user-select: none;
+            max-width: 1ch;
+            overflow: hidden;
         }
 
         .macro-title {
