added localization support

--- a/index.html
+++ b/index.html
@@ -264,6 +264,7 @@
             </button>
         </div>
 
+        <script src="script/i18n.js" defer></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
         <script src="script/highlight/lib/highlight.min.js"></script>
         <script src="script/html2pdf.bundle.min.js"></script>
